Removed opacity from compositing layer to fix the absence of blur filter.

--- a/src/components/Sections/Section-4/Projects.module.css
+++ b/src/components/Sections/Section-4/Projects.module.css
@@ -13,7 +13,7 @@
 	height: 100%;
 	/* GPU acceleration */
 	transform: translateZ(0);
-	will-change: transform, opacity;
+	will-change: transform;
 }
 
 .description-container {
@@ -57,7 +57,12 @@
 
 @media (max-height: 800px) and (max-width: 1600px) {
 	.projects-page-container {
-		padding: 70px 2vw 4vh 2vw;
+		padding: 100px 2vw 4vh 2vw;
 	}
+}
 
+@media (max-height: 800px) and (max-width: 800px) {
+	.projects-page-container {
+		padding: 75px 2vw 4vh 2vw;
+	}
 }
