--- a/src/components/Sections/Section-3/Skills.module.css
+++ b/src/components/Sections/Section-3/Skills.module.css
@@ -24,7 +24,7 @@
 	justify-content: center;
 	align-items: center;
 	transform: translateZ(0);
-	will-change: transform, opacity;
+	will-change: transform;
 	width: auto;
 	height: auto;
 }
