--- a/src/components/Sections/Section-3/Skills.module.css
+++ b/src/components/Sections/Section-3/Skills.module.css
@@ -4,13 +4,15 @@
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	gap: 128px;
-	margin-right: auto;
-	margin-left: auto;
+	gap: 150px;
+	margin: 0 auto;
+	padding: 200px 64px 64px 64px;
 	width: 90%;
 	max-width: 1700px;
 	height: 100%;
-	/* min-height: 900px; */
+	/* GPU acceleration */
+	transform: translateZ(0);
+	will-change: transform;
 }
 
 .skills-showcase {
@@ -25,6 +27,43 @@
 	align-items: center;
 	transform: translateZ(0);
 	will-change: transform;
-	width: auto;
 	height: auto;
+}
+
+@media (max-width: 1600px) {
+	.skills-page-container {
+		flex-direction: column-reverse;
+		gap: 24px;
+		padding: 16vh 3vw 8vh 3vw;
+	}
+}
+
+@media (max-width: 800px) {
+	.skills-page-container {
+		padding: 8vh 2vw 4vh 2vw;
+	}
+	
+	.skills-showcase {
+		column-gap: clamp(30px, 5vw, 40px);
+		row-gap: clamp(50px, 8vw, 60px);
+	}
+}
+
+@media (max-height: 800px) and (max-width: 1600px) {
+	.skills-page-container {
+		padding: 100px 2vw 4vh 2vw;
+	}
+}
+
+@media (max-height: 800px) and (max-width: 800px) {
+	.skills-page-container {
+		padding: 75px 2vw 4vh 2vw;
+	}
+}
+
+@media (max-width: 500px) {
+	.skills-showcase {
+		column-gap: clamp(20px, 4vw, 30px);
+		row-gap: clamp(40px, 6vw, 50px);
+	}
 }
