--- a/src/components/UI/SkillsBox/SkillsBox.module.css
+++ b/src/components/UI/SkillsBox/SkillsBox.module.css
@@ -25,7 +25,7 @@
 	transform: translateX(-50%);
 	color: rgba(var(--secondary-rgb));
 	font-weight: 600;
-	font-size: clamp(16px, 2.5vw, 23px);
+	font-size: clamp(0.9em, 2.5vw, 1.4em);
 	font-family: 'Jura';
 	user-select: none;
 	text-shadow: 0 0 16px rgba(5, 0, 16);
@@ -58,15 +58,21 @@
 	text-align: center;
 }
 
+@media (max-height: 800px) and (max-width: 800px) {
+	.skills-box {
+		padding: clamp(4px, 1vw, 8px) clamp(8px, 2vw, 12px);
+	}
+}
+
 @media (max-width: 800px) {
 	.skills-box {
-		gap: clamp(16px, 3vw, 32px);
+		gap: clamp(16px, 8vw, 64px);
 		padding: clamp(6px, 1vw, 10px) clamp(10px, 1.5vw, 16px);
 	}
 
 	.box-title {
-		top: clamp(-40px, -4vw, -28px);
-		font-size: clamp(14px, 2vw, 18px);
+		top: -32px;
+		/* font-size: clamp(14px, 2vw, 18px); */
 	}
 
 	.vertical-line {
@@ -75,23 +81,23 @@
 	}
 }
 
-@media (max-width: 500px) {
+@media (max-width: 400px) {
 	.skills-box {
-		gap: clamp(12px, 2.5vw, 20px);
+		gap: clamp(16px, 5vw, 32px);
 		border-radius: clamp(3px, 0.4vw, 6px) clamp(3px, 0.4vw, 6px) 0 0;
 		padding: clamp(4px, 0.8vw, 8px) clamp(8px, 1.2vw, 12px);
 	}
 
 	.box-title {
-		top: clamp(-32px, -3.5vw, -24px);
-		font-size: clamp(12px, 1.8vw, 16px);
+		top: -24px;
+		/* font-size: clamp(12px, 1.8vw, 16px); */
 	}
 
 	.skill-logo span {
 		font-size: clamp(8px, 1vw, 12px);
 	}
 
-		.vertical-line {
+	.vertical-line {
 		top: -7px;
 		height: 6px;
 	}
