--- a/src/components/UI/ExperienceBar/PopupLine.module.css
+++ b/src/components/UI/ExperienceBar/PopupLine.module.css
@@ -5,24 +5,24 @@
 
 /* --- Text Container --- */
 .text-container {
-	transform: translateZ(0);
-	will-change: transform, opacity;
 	border-radius: 6px;
 	padding: 8px 12px;
 	width: auto;
-	font-size: 16px;
+	font-size: 1.1em;
 	line-height: 22px;
 	font-family: 'Jura';
 	white-space: nowrap;
+	/* GPU acceleration */
+	transform: translateZ(0);
+	will-change: transform, opacity;
 }
 
 .text-container > strong:first-child {
 	display: block;
 	color: rgba(var(--primary-rgb), 0.8);
 	font-weight: 600;
-	font-weight: 600;
-	font-size: 22px;
-	line-height: 28px;
+	font-size: 1.2em;
+	line-height: 1.25em;
 	text-shadow: 0 0 8px rgba(var(--primary-rgb), 0.7);
 }
 
@@ -34,13 +34,13 @@
 .text-container.up.right {
 	position: absolute;
 	top: 0;
-	left: 10px;
+	left: 0.5em;
 }
 
 .text-container.down.right {
 	position: absolute;
 	bottom: 0;
-	left: 10px;
+	left: 0.5em;
 }
 
 /* --- Text LEFT of line --- */
@@ -51,11 +51,11 @@
 
 .text-container.up.left {
 	top: 0;
-	right: 10px;
+	right: 0.5em;
 }
 
 .text-container.down.left {
-	right: 10px;
+	right: 0.5em;
 	bottom: 0;
 }
 
@@ -91,4 +91,37 @@
 		rgba(148, 200, 255, 0.6) 75%,
 		rgba(146, 255, 253, 0.8) 100%
 	);
+}
+
+@media (min-width: 900px) and (max-width: 1400px) {
+	.popup-line-container {
+		height: clamp(100px, 11vh, 150px);
+	}
+	.popup-line {
+		height: clamp(100px, 11vh, 150px);
+	}
+	.text-container {
+		font-size: clamp(0.5em, 1.2vw, 1em);
+		line-height: clamp(1.1em, 1.2vh, 1.2em);
+		padding: 0.5em 1em;
+	}
+	.text-container > strong:first-child {
+		line-height: clamp(1.1em, 2vw, 1.2em);
+	}
+}
+
+@media (max-width: 900px) {
+	.popup-line-container {
+		height: clamp(100px, 11vh, 150px);
+	}
+	.popup-line {
+		height: clamp(100px, 11vh, 150px);
+	}
+	.text-container {
+		font-size: clamp(0.8em, 1.2vw, 1em);
+		line-height: 1.1em;
+	}
+	.text-container > strong:first-child {
+		line-height: 1.3em;
+	}
 }
