--- a/src/components/Sections/Section-2/Experience.module.css
+++ b/src/components/Sections/Section-2/Experience.module.css
@@ -1,14 +1,14 @@
 .experience-container {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
-	gap: 256px;
-	margin-right: auto;
-	margin-left: auto;
-	width: 80%;
+	justify-content: center;
+	width: 90%;
 	max-width: 1500px;
 	height: 100%;
+	margin: 0 auto;
+	padding: 200px 0 4vh 0;
+	gap: clamp(12px, 20vh, 256px);
 }
 
 .exp-bar-and-trailing-dots-container {
@@ -16,8 +16,8 @@
 	flex-direction: row;
 	align-content: center;
 	align-items: center;
-	gap: 9px;
 	width: 100%;
+	gap: 9px;
 }
 
 .exp-bar-wrapper {
@@ -30,9 +30,9 @@
 
 .exp-bar {
 	position: relative;
+	width: 100%;
+	height: 10px;
 	transform: translateZ(0);
-	box-shadow: 0 0 10px rgba(146, 255, 230, 0.4),
-		0 0 20px rgba(146, 255, 230, 0.2);
 	border-radius: 6px;
 	background: linear-gradient(
 		90deg,
@@ -40,8 +40,8 @@
 		rgba(148, 200, 255, 0.8) 75%,
 		rgba(146, 255, 253, 0.8)
 	);
-	width: 100%;
-	height: 10px;
+	box-shadow: 0 0 10px rgba(146, 255, 230, 0.4),
+		0 0 20px rgba(146, 255, 230, 0.2);
 	user-select: none;
 }
 
@@ -52,27 +52,27 @@
 }
 
 .exp-bar-trailing-dots {
-	transform: translateZ(0);
-	will-change: transform, opacity;
-	box-shadow: 0 0 10px rgba(146, 255, 230, 0.4),
-		0 0 20px rgba(146, 255, 230, 0.2);
-	border-radius: 50%;
-	background: rgba(146, 255, 253, 0.8);
 	width: 9px;
 	height: 9px;
+	transform: translateZ(0);
+	border-radius: 50%;
+	background: rgba(146, 255, 253, 0.8);
+	box-shadow: 0 0 10px rgba(146, 255, 230, 0.4),
+		0 0 20px rgba(146, 255, 230, 0.2);
+	will-change: transform, opacity;
 	user-select: none;
 }
 
 @media (max-width: 1400px) {
 	.experience-container {
-		gap: clamp(32px, 4vh, 64px);
+		padding: 16vh 3vw 8vh 3vw;
+		gap: clamp(12px, 4vh, 64px);
 	}
 	.exp-bar-and-trailing-dots-container {
-		height: 500px;
-		scroll-behavior: smooth;
-		scrollbar-width: thin;
 		width: 100vw;
-		padding: 0 10vw;
+		height: 50%;
+
+		padding: 4vh 10vw;
 		mask: linear-gradient(
 			to right,
 			transparent 0%,
@@ -80,6 +80,9 @@
 			rgb(0, 0, 0) clamp(92%, 4vw, 96%),
 			transparent 100%
 		);
+		scroll-behavior: smooth;
+		scrollbar-color: rgba(var(--primary-rgb), 0.3) transparent;
+		scrollbar-width: thin;
 	}
 	.exp-bar-wrapper {
 		width: 100%;
@@ -87,13 +90,29 @@
 }
 
 @media (max-width: 900px) {
+	.experience-container {
+		padding: 8vh 2vw 4vh 2vw;
+	}
 	.exp-bar-and-trailing-dots-container {
+		height: 350px;
+		padding: 4vh 12vw;
 		overflow-x: auto;
 		overflow-y: hidden;
-		padding: 0 12vw;
 	}
 	.exp-bar-wrapper {
-        width: 125vw;
-        min-width: 1000px;
-    }
+		width: 125vw;
+		min-width: 1000px;
+	}
+}
+
+@media (max-height: 800px) and (max-width: 1400px) {
+	.experience-container {
+		padding: 100px 2vw 4vh 2vw;
+	}
+}
+
+@media (max-height: 800px) and (max-width: 900px) {
+	.experience-container {
+		padding: 75px 2vw 4vh 2vw;
+	}
 }
