--- a/src/components/UI/TextBox/TextBox.module.css
+++ b/src/components/UI/TextBox/TextBox.module.css
@@ -1,11 +1,11 @@
 .text-container {
 	height: auto;
 	padding: 22px 44px;
+	overflow: hidden;
 	border-radius: 12px;
 	font-size: 1.2em;
 	line-height: 1.6em;
 	text-shadow: 0 0 18px var(--bg-dark);
-	overflow: hidden;
 	/* GPU acceleration */
 	transform: translateZ(0);
 	will-change: transform, opacity;
@@ -14,6 +14,7 @@
 @media (max-width: 1600px) {
 	.text-container {
 		padding: 16px 32px;
+		padding-bottom: 2vh !important;
 		font-size: 1.1em;
 		line-height: 1.4em;
 	}
@@ -28,7 +29,6 @@
 
 @media (max-width: 500px) {
 	.text-container {
-		padding: 10px 18px;
 		font-size: 0.9em;
 		line-height: 1.3em;
 	}
