--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  width: 100vw;
   overflow: hidden;
 }
 
@@ -10,7 +11,6 @@
   top: 0;
   left: 0;
   z-index: -1000;
-  width: 100vw;
   height: 100vh;
   /* pointer-events: none; */
   /* GPU acceleration */
@@ -29,6 +29,7 @@
 .scroll-wrapper {
   height: 100vh;
   overflow-y: scroll;
+  overflow-x: hidden;
   scroll-behavior: auto;
   scroll-snap-type: y mandatory;
 }
