--- a/src/components/UI/SkillsBox/SkillsBox.module.css
+++ b/src/components/UI/SkillsBox/SkillsBox.module.css
@@ -14,6 +14,7 @@
 	border-bottom: none;
 	border-radius: clamp(4px, 0.5vw, 8px) clamp(4px, 0.5vw, 8px) 0 0;
 	padding: clamp(8px, 1vw, 12px) clamp(12px, 2vw, 24px);
+	background-color: rgba(var(--bg-dark-rgb), 0.1);
 	width: auto;
 	height: auto;
 }
@@ -52,10 +53,15 @@
 	/* text-shadow: 0 0 10px rgba(5, 0, 16); */
 }
 
+.skill-logo img {
+	filter: drop-shadow(0 2px 8px rgba(var(--bg-dark-rgb), 0.5));
+}
+
 .skill-logo span {
 	font-size: clamp(10px, 1.2vw, 14px);
 	line-height: 1.2;
 	text-align: center;
+	text-shadow: 0px 0px 8px rgba(var(--bg-dark-rgb), 1);
 }
 
 @media (max-height: 800px) and (max-width: 800px) {
