Fixed bottom padding issues on TextBox on Exp and Skills page.

--- a/src/components/Sections/Section-2/Experience.module.css
+++ b/src/components/Sections/Section-2/Experience.module.css
@@ -81,7 +81,7 @@
 			transparent 100%
 		);
 		scroll-behavior: smooth;
-		scrollbar-color: rgba(var(--primary-rgb), 0.3) transparent;
+		scrollbar-color: rgba(var(--secondary-rgb), 0.3) transparent;
 		scrollbar-width: none;
 	}
 	.exp-bar-wrapper {
