--- a/src/components/UI/ScrollingTimeline/ScrollingTimeline.module.css
+++ b/src/components/UI/ScrollingTimeline/ScrollingTimeline.module.css
@@ -46,3 +46,10 @@
     transform: scale(0.8) translateY(-50%);
   }
 }
+
+@media (max-width: 500px) {
+  .section-timeline-wrapper {
+    left: 8px;
+    transform: scale(0.7) translateY(-50%);
+  }
+}
