--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -233,9 +233,9 @@ button:focus {
 	/* border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.2)
 		rgba(146, 255, 230, 0.1) rgba(255, 255, 255, 0.1); */
 	/* box-shadow: inset 0px 0px 14px 4px rgba(40, 31, 68, 0.25); */
-	box-shadow: 0px 0px 10px 5px rgba(115, 157, 255, 0.3);
-	box-shadow: 0px 0px 20px 5px rgba(115, 157, 255, 0.2);
-	box-shadow: 0px 0px 30px 5px rgba(115, 157, 255, 0.1);
+	box-shadow: 0px 0px 5px 5px rgba(var(--secondary-rgb), 0.2);
+	box-shadow: 0px 0px 10px 5px rgba(var(--secondary-rgb), 0.1);
+	box-shadow: 0px 0px 20px 5px rgba(var(--secondary-rgb), 0.05);
 	border: 1px solid rgba(var(--secondary-rgb), 0.25);
 	border-width: 1px 1px 1px 1px;
 
