--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,7 +31,7 @@
 	--color-primary: rgb(var(--primary-rgb));
 	--color-secondary: rgb(var(--secondary-rgb));
 	--bg-dark: rgb(var(--bg-dark-rgb));
-    font-family: 'Jura';
+	font-family: 'Jura';
 }
 
 * {
@@ -145,11 +145,19 @@ button:focus {
 .glass-dark-primary {
 	position: relative;
 	z-index: 1;
-	backdrop-filter: blur(4.5px);
+	/* backdrop-filter: blur(5px); */
 	transition: backdrop-filter 0.3s ease;
-	box-shadow: inset 0px 0px 14px 4px rgba(40, 31, 68, 0.25);
-	border-width: 1px 1px 1px 1px;
-	border-style: solid;
+	box-shadow: inset 0px 0px 14px 4px rgba(152, 128, 218, 0.1);
+	/* border: 1px solid transparent;
+	border-image: linear-gradient(
+			to right,
+			rgba(146, 255, 230, 0.2),
+			rgba(146, 255, 230, 0.2) 25%,
+			rgba(146, 255, 230, 0.1) 50%,
+			rgba(255, 255, 255, 0.1) 75%
+		)
+		1; */
+	border: 1px solid;
 	border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.2)
 		rgba(146, 255, 230, 0.1) rgba(255, 255, 255, 0.1);
 	border-radius: 18px;
@@ -238,7 +246,6 @@ button:focus {
 	box-shadow: 0px 0px 20px 5px rgba(var(--secondary-rgb), 0.05);
 	border: 1px solid rgba(var(--secondary-rgb), 0.25);
 	border-width: 1px 1px 1px 1px;
-
 }
 
 /* --- full-dropshadow --- */
@@ -338,53 +345,53 @@ button:focus {
 
 /* Backgrounds */
 .spline-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -1000;
-  width: 100vw;
-  height: 100vh;
-  /* GPU acceleration */
-  transform: translateZ(0);
-  will-change: contents;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: -1000;
+	width: 100vw;
+	height: 100vh;
+	/* GPU acceleration */
+	transform: translateZ(0);
+	will-change: contents;
 }
 
 .fullscreen-video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  z-index: -999;
-  /* Hack for "Why the heck are my backgrounds purple-ish" */
-  filter: hue-rotate(-7deg);
-  transition: opacity 0.5s ease-in-out;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  /* GPU acceleration */
-  transform: translateZ(0);
-  will-change: opacity, transform;
+	position: absolute;
+	top: 0;
+	left: 0;
+	opacity: 0;
+	z-index: -999;
+	/* Hack for "Why the heck are my backgrounds purple-ish" */
+	filter: hue-rotate(-7deg);
+	transition: opacity 0.5s ease-in-out;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	/* GPU acceleration */
+	transform: translateZ(0);
+	will-change: opacity, transform;
 }
 
 .fullscreen-video.visible {
-  opacity: 1;
-  /* GPU acceleration*/
-  transform: translateZ(0);
+	opacity: 1;
+	/* GPU acceleration*/
+	transform: translateZ(0);
 }
 
 .loading-screen {
-  display: flex;
-  position: absolute;
-  top: 0;
-  left: 0;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-  background: rgba(0, 0, 0, 0.5);
-  width: 100%;
-  height: 100%;
-  color: rgba(146, 255, 253, 0.8);
-  font-size: 2rem;
+	display: flex;
+	position: absolute;
+	top: 0;
+	left: 0;
+	justify-content: center;
+	align-items: center;
+	z-index: 1000;
+	background: rgba(0, 0, 0, 0.5);
+	width: 100%;
+	height: 100%;
+	color: rgba(146, 255, 253, 0.8);
+	font-size: 2rem;
 }
 
 /* Layout Debug */
