--- a/src/components/Sections/Section-1/Home.module.css
+++ b/src/components/Sections/Section-1/Home.module.css
@@ -1,53 +1,201 @@
 .home-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+	margin: 0 auto;
+	padding: 300px 2vw 40vh 2vw;
 	transform: translateZ(0);
-  will-change: opacity;
-  padding-top: 300px;
-  padding-bottom: 40vh;
-  height: 100%;
+	/* will-change: opacity; */
 }
 
-.buttons-wrapper {
-  display: flex;
-  align-items: center;
-  gap: 30px;
-  margin-top: 50px;
-  width: 700px;
+.home-content-container {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	width: auto;
+	max-width: 90vw;
+	gap: clamp(2em, 2vh, 3em);
 }
 
 .name-wrapper {
-    width: auto;
-  color: rgba(148, 200, 255, 0.65);
-  font-weight: 500;
-  font-size: 12rem;
-  line-height: 1.075em;
-  font-family: "Jura", "Montserrat", sans-serif;
-  user-select: none;
-  text-align: left;
-  text-shadow: 0px 0px 18px rgba(5, 0, 16, 0.2),
-    0px 0px 24px rgba(5, 0, 16, 0.4);
+	display: flex;
+	flex-direction: column;
+	width: auto;
+	height: auto;
+	overflow: visible;
+	transform: translateY(0.2em);
+	color: rgba(148, 200, 255, 0.65);
+	font-weight: 500;
+	font-size: 12em;
+	font-family: 'Jura', 'Montserrat', sans-serif;
+	text-shadow: 0px 0px 18px rgba(5, 0, 16, 0.2),
+		0px 0px 24px rgba(5, 0, 16, 0.4);
+	user-select: none;
 }
 
 .dirk {
-  opacity: 1;
-  mask: linear-gradient(-90deg, transparent 0%, black 20%, black 100%);
+	width: fit-content;
+	overflow: visible;
+	transform: translateX(-0.1em);
+	mask: linear-gradient(-90deg, transparent 0%, black 20%, black 100%);
+	opacity: 1;
 }
 
 .wilson {
-  opacity: 1;
-  mask: linear-gradient(-90deg, transparent 0%, black 11%, black 100%);
-  padding-left: 0.093em;
+	width: fit-content;
+	margin-top: -0.2em;
+	overflow: visible;
+	mask: linear-gradient(-90deg, transparent 0%, black 11%, black 100%);
+	opacity: 1;
 }
 
 .di {
-  filter: blur(1.1px);
-  color: rgb(146, 255, 253);
+	color: rgb(146, 255, 253);
+	filter: blur(1.1px);
 }
 
 .wi {
-  filter: blur(1.1px);
-  color: rgb(146, 255, 253);
+	color: rgb(146, 255, 253);
+	filter: blur(1.1px);
+}
+
+.buttons-wrapper {
+	display: flex;
+	flex-wrap: row;
+	align-items: center;
+	width: 100%;
+	padding-right: 2vw;
+	gap: 48px;
+}
+
+.home-button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: auto;
+	min-width: 250px;
+	height: 70px;
+	padding: 0px 20px;
+	gap: 5px;
+	border-radius: 18px;
+	backdrop-filter: blur(5px);
+	color: rgb(202, 255, 243);
+	font-weight: 650;
+	font-size: 1.8em;
+	font-family: 'Jura', sans-serif;
+	text-shadow: 0 0 5px rgba(255, 255, 255, 0.8);
+	cursor: pointer;
+
+	user-select: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	-webkit-touch-callout: none;
+	-webkit-tap-highlight-color: transparent;
+
+	transition: color 0.2s ease-out;
+}
+
+.home-button-down-arrow {
+	position: relative;
+	top: 0.05em;
+	filter: invert(1) drop-shadow(0 0 2px rgba(255, 255, 255, 0.4));
+}
+
+.home-button:hover {
+	color: rgb(225, 255, 248);
+}
+
+@media (max-height: 900px) and (min-width: 800px) {
+	.name-wrapper {
+		font-size: clamp(8em, 20vh, 12em);
+	}
+}
+
+@media (max-width: 1000px) {
+	.home-container {
+		padding: 200px 48px 150px 48px;
+	}
+
+	.name-wrapper {
+		font-size: 10em;
+	}
+
+	.home-button {
+		min-width: 220px;
+		height: 60px;
+		padding: 0px 18px;
+		border-radius: 16px;
+		font-size: 1.5em;
+	}
+}
+
+@media (max-width: 800px) {
+	.home-container {
+		padding: 120px 32px 100px 32px;
+	}
+
+	.buttons-wrapper {
+		flex-direction: column;
+		width: 100%;
+		gap: 2em;
+	}
+
+	.buttons-wrapper > :nth-child(2) {
+		display: flex;
+		flex-direction: column;
+		gap: 0;
+		margin-bottom: 0;
+    /* border: solid 1px rgba(var(--secondary-rgb), 0.2); */
+    /* backdrop-filter: blur(5px) !important; */
+    padding-top: 1em;
+    /* background-color: rgba(10, 32, 56, 0.1); */
+	}
+
+	.home-button-down-arrow {
+		position: relative;
+		top: -0.4em;
+		scale: 0.9;
+	}
+
+	.name-wrapper {
+		font-size: clamp(5em, 20vw, 9em);
+	}
+
+	.home-button {
+		width: 100%;
+		height: clamp(50px, 10vw, 60px);
+		padding: 0px 16px;
+		border-radius: 14px;
+		font-size: 1.25em;
+	}
+}
+
+@media (max-width: 400px) {
+	.home-container {
+		padding: 100px 24px 80px 24px;
+	}
+
+	.home-content-container {
+		max-width: 95vw;
+	}
+
+	.name-wrapper {
+		font-size: clamp(3em, 20vw, 5em);
+	}
+
+	.home-button {
+		padding: 0px 14px;
+		border-radius: 12px;
+		font-size: 1em;
+	}
+
+	.home-button-down-arrow {
+		position: relative;
+		top: -0.6em;
+		scale: 0.6;
+	}
 }
