--- a/src/components/UI/AlternatingText/AlternatingText.module.css
+++ b/src/components/UI/AlternatingText/AlternatingText.module.css
@@ -1,8 +1,7 @@
 .dynamic-text-wrapper {
 	display: flex;
-	margin-top: 15px;
-	margin-bottom: -5px;
-	width: 700px;
+	width: auto;
+	max-width: 100%;
 	height: auto;
 }
 
@@ -11,9 +10,31 @@
 	will-change: transform, opacity;
 	color: rgba(148, 200, 255, 0.8);
 	font-weight: 400;
-	font-size: 3.6rem;
+	font-size: 3.6em;
 	font-family: 'Montserrat', sans-serif;
 	user-select: none;
 	text-shadow: 0px 0px 18px rgba(5, 0, 16, 0.2),
 		0px 0px 24px rgba(5, 0, 16, 0.4);
 }
+
+@media (max-width: 1000px) {
+	.dynamic-text {
+		font-size: 3em;
+	}
+}
+
+@media (max-width: 800px) {
+	
+	.dynamic-text {
+		font-size: clamp(1em, 7vw, 3em);
+		/* line-height: 1.2; */
+	}
+}
+
+@media (max-height: 900px) and (min-width: 800px) {
+	.dynamic-text {
+		font-size: clamp(2.2em, 5vh, 3em);
+		/* line-height: 1.2; */
+	}
+}
+
