--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,6 +44,7 @@ html,
 body {
 	max-width: 100vw;
 	overflow: hidden;
+	font-size: 16px;
 }
 
 body {
@@ -160,7 +161,7 @@ button:focus {
 	border: 1px solid;
 	border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.2)
 		rgba(146, 255, 230, 0.1) rgba(255, 255, 255, 0.1);
-	border-radius: 18px;
+	border-radius: inherit;
 	background-image: radial-gradient(
 			circle at 100% 10%,
 			rgba(19, 7, 87, 0.15) 10%,
@@ -182,7 +183,7 @@ button:focus {
 	left: 0;
 	opacity: 0;
 	transition: opacity 0.4s ease-out;
-	border-radius: 18px;
+	border-radius: inherit;
 	background: linear-gradient(
 		200deg,
 		rgba(67, 183, 187, 0),
@@ -211,7 +212,7 @@ button:focus {
 .glass-dark-soft {
 	position: relative;
 	z-index: 1;
-	backdrop-filter: blur(4.5px);
+	backdrop-filter: blur(5px);
 	/* border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.2)
 		rgba(146, 255, 230, 0.1) rgba(255, 255, 255, 0.1); */
 	/* box-shadow: inset 0px 0px 14px 4px rgba(40, 31, 68, 0.25); */
@@ -237,7 +238,7 @@ button:focus {
 .glass-dark-soft-no-gradient {
 	position: relative;
 	z-index: 1;
-	backdrop-filter: blur(6.5px);
+	backdrop-filter: blur(10px);
 	/* border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.2)
 		rgba(146, 255, 230, 0.1) rgba(255, 255, 255, 0.1); */
 	/* box-shadow: inset 0px 0px 14px 4px rgba(40, 31, 68, 0.25); */
