--- a/src/components/Sections/Section-5/Contact.module.css
+++ b/src/components/Sections/Section-5/Contact.module.css
@@ -10,12 +10,218 @@
 	height: 100%;
 	margin: 0 auto;
 	padding: 200px 64px 10vh 64px;
-	gap: 150px;
+	gap: 10%;
 	/* GPU acceleration */
 	transform: translateZ(0);
 	will-change: transform;
 }
 
-.input-field-small {
-    width: clamp(300px, 50%, 600px);
+.contact-form {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: center;
+	width: 100%;
+	max-width: 1200px;
+	padding: 1em 2em;
+	gap: clamp(8px, 2vh, 24px);
+	border-radius: 12px;
+	font-size: 1.2em;
+	/* background: rgba(7, 9, 42, 0.2); */
+}
+
+.contact-form h1 {
+	text-shadow: 0px 0px 8px rgba(255, 255, 255, 1);
+}
+
+.contact-form label {
+	color: rgba(255, 255, 255, 0.8);
+	text-shadow: 0px 0px 8px rgba(255, 255, 255, 1);
+}
+
+.titled-input-field {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	width: 100%;
+	gap: 10px;
+}
+
+.titled-input-field input,
+.titled-input-field textarea {
+	padding: 0.5em 1em 0.5em 1em;
+	border-radius: 6px;
+	background: none;
+	font-size: 0.8em;
+	line-height: 1.6em;
+	font-family: 'Montserrat', sans-serif;
+	resize: none;
+	/* background: rgba(7, 9, 42, 0.4); */
+	/* background-image: linear-gradient(
+		90deg,
+		rgba(0, 0, 0, 0.1),
+		rgba(14, 5, 39, 0.1)
+	); */
+}
+
+.titled-input-field input {
+	width: 100%;
+	max-width: 400px;
+}
+
+.titled-input-field textarea {
+	position: relative;
+	width: 100%;
+	height: clamp(100px, 20vh, 300px);
+	scroll-behavior: smooth;
+	scrollbar-color: rgba(var(--primary-rgb), 0.3) transparent;
+	scrollbar-width: thin;
+	/* mask: linear-gradient(
+		to bottom,
+		transparent 1%,
+		rgb(0, 0, 0) clamp(5%, 1vh, 8%),
+		rgb(0, 0, 0) clamp(92%, 3vh, 95%),
+		transparent 100%
+	); */
+}
+
+.outline {
+	z-index: 100;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border: solid 1px green;
+}
+
+.submit-button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: auto;
+	height: 70px;
+	margin-top: clamp(4px, 2vh, 20px);
+	/* margin-left: auto; */
+	padding: 0px 20px;
+	gap: 5px;
+	border-radius: 12px;
+	backdrop-filter: blur(5px);
+	color: rgb(202, 255, 243);
+	font-weight: 650;
+	font-size: 1.2em;
+	font-family: 'Jura', sans-serif;
+	text-shadow: 0 0 8px rgba(255, 255, 255, 0.8);
+	cursor: pointer;
+
+	user-select: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	-webkit-touch-callout: none;
+	-webkit-tap-highlight-color: transparent;
+
+	transition: color 0.2s ease-out;
+}
+
+.submit-button:hover {
+	color: rgb(225, 255, 248);
+}
+
+/* .submit-button-icon {
+	position: relative;
+	top: 0.05em;
+	filter: invert(1) drop-shadow(0 0 2px rgba(255, 255, 255, 0.4));
+} */
+
+@media (max-width: 1600px) {
+	.contact-page-container {
+		padding: 16vh 3vw 8vh 3vw;
+		gap: 5%;
+	}
+
+	.contact-form {
+		padding: 1em 1.5em;
+		font-size: 1.1em;
+	}
+}
+
+@media (max-width: 800px) {
+	.contact-page-container {
+		width: 95%;
+		padding: 8vh 2vw 4vh 2vw;
+	}
+
+	.contact-form {
+		padding: 1em;
+		gap: clamp(6px, 1.5vh, 20px);
+		font-size: 1em;
+	}
+
+	.titled-input-field input,
+	.titled-input-field textarea {
+		max-width: 100%;
+		font-size: 0.8em;
+	}
+
+	.titled-input-field input {
+		width: 100%;
+	}
+
+	.titled-input-field textarea {
+		height: clamp(120px, 25vh, 200px);
+	}
+
+	.submit-button {
+		width: 100%;
+		height: 60px;
+		font-size: 1.1em;
+	}
+}
+
+@media (max-height: 800px) and (max-width: 1600px) {
+	.contact-page-container {
+		transform: translateY(-5vh);
+		gap: 0;
+		padding: 100px 2vw 4vh 2vw;
+	}
+
+	.submit-button {
+		height: clamp(30px, 7vh, 60px);
+	}
+	/* 
+	.titled-input-field textarea {
+		height: clamp(60px, 12vh, 150px);
+	} */
+}
+
+@media (max-height: 800px) and (max-width: 800px) {
+	.contact-page-container {
+		padding: 100px 2vw 5vh 2vw;
+		justify-content: space-between;
+	}
+
+	.contact-form {
+		gap: clamp(8px, 1vh, 16px);
+	}
+
+	.titled-input-field textarea {
+		height: clamp(80px, 20vh, 200px);
+	}
+
+	.submit-button {
+		height: 50px;
+		margin-top: clamp(2px, 1vh, 12px);
+		font-size: 1em;
+	}
+}
+
+@media (max-width: 400px) {
+	.submit-button {
+		height: 50px;
+		margin-top: clamp(2px, 1vh, 12px);
+		font-size: 1em;
+	}
 }
