--- a/src/components/UI/TextBox/TextBox.module.css
+++ b/src/components/UI/TextBox/TextBox.module.css
@@ -3,6 +3,7 @@
 	padding: 16px 32px 16px 32px;
 	overflow: hidden;
 	border-radius: 12px;
+	/* color: white; */
 	font-size: 1.2em;
 	line-height: 1.6em;
 	text-shadow: 0 0 18px var(--bg-dark);
