--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,7 @@
 
 	--primary-rgb: 146, 255, 253;
 	--secondary-rgb: 148, 200, 255;
+	--logo-rgb: 202, 255, 243;
 	--bg-dark-rgb: 5, 0, 16;
 
 	--color-primary: rgb(var(--primary-rgb));
@@ -55,6 +56,8 @@ body {
 a {
 	color: inherit;
 	text-decoration: none;
+	outline: none;
+	-webkit-tap-highlight-color: transparent;
 }
 
 ul {
