--- a/src/components/Sections/Section-1/Home.module.css
+++ b/src/components/Sections/Section-1/Home.module.css
@@ -54,12 +54,12 @@
 
 .di {
 	color: rgb(146, 255, 253);
-	filter: blur(1.1px);
+	/* filter: blur(1.1px); */
 }
 
 .wi {
 	color: rgb(146, 255, 253);
-	filter: blur(1.1px);
+	/* filter: blur(1.1px); */
 }
 
 .buttons-wrapper {
