--- a/src/components/UI/BackgroundVideo/BackgroundVideo.module.css
+++ b/src/components/UI/BackgroundVideo/BackgroundVideo.module.css
@@ -6,8 +6,8 @@
 	width: 100vw;
 	height: 100lvh;
 	/* GPU acceleration */
-	/* transform: translateZ(0);
-	will-change: contents; */
+	transform: translateZ(0);
+	will-change: contents;
 }
 
 .fullscreen-video {
@@ -23,12 +23,32 @@
 	/* Hack for "Why the heck are my backgrounds purple-ish" */
 	filter: hue-rotate(-7deg);
 	/* GPU acceleration */
-	/* transform: translateZ(0);
-	will-change: opacity, transform; */
+	transform: translateZ(0);
+	will-change: opacity, transform;
 }
 
-.fullscreen-video.visible {
+.fullscreen-image {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	opacity: 0;
+	transition: opacity 0.5s ease-in-out;
+	z-index: -999;
+	/* Hack for "Why the heck are my backgrounds purple-ish" */
+	filter: hue-rotate(-7deg);
+	/* GPU acceleration */
+	transform: translateZ(0);
+	will-change: opacity, transform;
+}
+
+.fullscreen-video.visible,
+.fullscreen-image.visible {
 	opacity: 1;
 	/* GPU acceleration*/
-	/* transform: translateZ(0); */
+	transform: translateZ(0);
 }
