--- a/src/components/Sections/Section-4/Projects.module.css
+++ b/src/components/Sections/Section-4/Projects.module.css
@@ -4,7 +4,6 @@
 	flex-direction: row;
 	align-items: center;
 	justify-content: center;
-	/* min-height: 900px; */
 	width: 90%;
 	max-width: 1700px;
 	height: 100%;
@@ -25,6 +24,32 @@
 	/* GPU acceleration */
 	transform: translateZ(0);
 	will-change: scroll-position;
+}
+
+.description-container ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  column-gap: 1.25em;
+  row-gap: 0.5em;
+}
+
+.description-container li {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+}
+
+.description-container li::before {
+  content: "•";
+  font-size: 1.5em;
+  line-height: 0;
+  padding-bottom: 0.2em;
+  margin-right: 0.3em;
+  color: inherit;
 }
 
 @media (max-width: 1600px) {
