--- a/src/components/Sections/Section-5/Contact.module.css
+++ b/src/components/Sections/Section-5/Contact.module.css
@@ -45,6 +45,7 @@
 	align-items: flex-start;
 	width: 100%;
 	gap: 10px;
+	user-select: none;
 }
 
 .titled-input-field input,
@@ -56,6 +57,7 @@
 	line-height: 1.6em;
 	font-family: 'Montserrat', sans-serif;
 	resize: none;
+	user-select: auto;
 	/* background: rgba(7, 9, 42, 0.4); */
 	/* background-image: linear-gradient(
 		90deg,
@@ -78,25 +80,23 @@
 	scrollbar-width: thin;
 }
 
-.outline {
-	z-index: 100;
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	border: solid 1px green;
+.submit-button-container {
+	display: flex;
+	height: auto;
+	width: auto;
+	column-gap: 2em;
+	row-gap: 2em;
+	justify-content: center;
+	align-items: center;
+	margin-top: clamp(4px, 2vh, 20px);
 }
 
 .submit-button {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: auto;
+	width: 250px;
 	height: 70px;
-	margin-top: clamp(4px, 2vh, 20px);
 	padding: 0px 20px;
 	gap: 5px;
 	border-radius: 12px;
@@ -120,6 +120,17 @@
 
 .submit-button:hover {
 	color: rgb(225, 255, 248);
+}
+
+.spinner {
+	display: inline-block;
+	width: 1em;
+	height: 1em;
+	border: 2px solid rgba(var(--logo-rgb));
+	border-top: 2px solid transparent;
+	border-right: 2px solid transparent;
+	border-left: 2px solid transparent;
+	border-radius: 50%;
 }
 
 /* .submit-button-icon {
@@ -166,6 +177,11 @@
 		height: clamp(120px, 25vh, 200px);
 	}
 
+	.submit-button-container {
+		width: 100%;
+		flex-direction: column;
+	}
+
 	.submit-button {
 		width: 100%;
 		height: 60px;
@@ -175,7 +191,7 @@
 
 @media (max-height: 800px) and (max-width: 1600px) {
 	.contact-page-container {
-		padding: 100px 2vw 4vh 2vw;
+		padding: 10vh 2vw 4vh 2vw;
 		gap: 0;
 		transform: translateY(-5vh);
 	}
@@ -192,7 +208,7 @@
 @media (max-height: 800px) and (max-width: 800px) {
 	.contact-page-container {
 		justify-content: space-between;
-		padding: 100px 2vw 5vh 2vw;
+		padding: 10vh 2vw 5vh 2vw;
 	}
 
 	.contact-form {
