Minor formatting changes. - Force form text to be white regardless of browser light/dark theme.

--- a/src/components/Sections/Section-5/Contact.module.css
+++ b/src/components/Sections/Section-5/Contact.module.css
@@ -50,6 +50,7 @@
 
 .titled-input-field input,
 .titled-input-field textarea {
+	color: white !important;
 	padding: 0.5em 1em 0.5em 1em;
 	border-radius: 6px;
 	background: none;
