--- a/src/components/UI/Footer/Footer.module.css
+++ b/src/components/UI/Footer/Footer.module.css
@@ -11,7 +11,7 @@
 	font-size: 1em;
 	text-align: left;
 	filter: drop-shadow(0px 0px 4px rgba(255, 255, 255, 0.5));
-	font-family: 'Montserrat', sans-serif;
+	font-family: var(--font-montserrat);
 	padding-bottom: 5px;
 }
 
