--- a/src/components/UI/BackgroundVideo/BackgroundVideo.module.css
+++ b/src/components/UI/BackgroundVideo/BackgroundVideo.module.css
@@ -28,14 +28,11 @@
 }
 
 .fullscreen-image {
-	position: absolute;
+	position: absolute !important;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
 	opacity: 0;
 	transition: opacity 0.5s ease-in-out;
 	z-index: -999;
@@ -43,7 +40,7 @@
 	filter: hue-rotate(-7deg);
 	/* GPU acceleration */
 	transform: translateZ(0);
-	will-change: opacity, transform;
+	will-change: opacity;
 }
 
 .fullscreen-video.visible,
